--- a/LiteCommerce.Admin/Views/Employee/Index.cshtml
+++ b/LiteCommerce.Admin/Views/Employee/Index.cshtml
@@ -17,14 +17,15 @@
         </form>
     </div>
 </div>
-<div class="container-fluid row" style="margin-bottom:10px;">
-    <div class="col-sm-8">
-        There are <b>@Model.RowCount</b> Employees. Page @string.Format("{0}/{1}", Model.Page, Model.PageCount)
+<form action="~/Employee/Delete" method="post">
+    <div class="container-fluid row" style="margin-bottom:10px;">
+        <div class="col-sm-8">
+            There are <b>@Model.RowCount</b> Employees. Page @string.Format("{0}/{1}", Model.Page, Model.PageCount)
         </div>
         <div class="col-md-4 text-right">
             <div class="btn-group">
                 <a href="~/Employee/Input" class="btn btn-sm btn-primary">Add Employee</a>
-                <button type="button" class="btn btn-sm btn-danger">Delete Employees</button>
+                <button type="submit" class="btn btn-sm btn-danger">Delete Employees</button>
             </div>
         </div>
     </div>
@@ -49,9 +50,9 @@
                     {
                         <tr>
                             <td>
-                                <input type="checkbox" />
+                                <input type="checkbox" name="employeeIDs" value="@employee.EmployeeID" />
                             </td>
-                            <td>@i</td>
+                            <td>@((Model.Page - 1) * Model.PageSize + ++i)</td>
                             <td>
                                 <div class="pull-left image">
                                     <img src="~/@employee.PhotoPath" height="60px" width="60px" class="img-circle" alt="User Image">
@@ -64,8 +65,8 @@
                                 </span>
                             </td>
                             <td>
-                                <span style="display:block">BirthDay:@employee.BirthDate.ToShortDateString()</span>
-                                <span>HireDate:@employee.HireDate.ToShortDateString()</span>
+                                <span style="display:block">BirthDay:@(string.Format("{0:dd/MM/yyyy}", employee.BirthDate))</span>
+                                <span>HireDate:@(string.Format("{0:dd/MM/yyyy}", employee.HireDate))</span>
                             </td>
                             <td>
                                 <span style="display:block"><i class="fa fa-envelope"></i>@employee.Email</span>
@@ -76,7 +77,7 @@
                                 <span style="display:block">@employee.Notes</span>
                             </td>
                             <td class="text-right">
-                                <a class="btn btn-sm btn-default" href="~/Employee/Input/@i/">
+                                <a class="btn btn-sm btn-default" href="~/Employee/Input/@employee.EmployeeID/">
                                     <i class="fa fa-edit"></i>
                                 </a>
                             </td>
@@ -85,52 +86,53 @@
                 </tbody>
             </table>
         </div>
-        <div class="box-footer clearfix text-center">
-            <ul class="pagination pagination-sm no-margin pull-right">
-                @{
-                    int currentPage = Model.Page;
-                    // Pagination head
-                    if (currentPage - 5 > 0)
-                    {
-                        int prePage = currentPage - 1;
-                        <li><a href="~/Employee?searchValue=@Model.SearchValue&page=1">‹‹</a></li>
-                        <li><a href="~/Employee?searchValue=@Model.SearchValue&page=@prePage">‹</a></li>
-                        <li><a href="#">...</a></li>
-                    }
-                    int startPage = currentPage - 4 > 0 ? currentPage - 4 : 1;
-                    for (int page = startPage; page <= currentPage; page++)
-                    {
-                        if (page == currentPage)
-                        {
-                            <li class="active"><a href="~/Employee?searchValue=@Model.SearchValue&page=@page">@page</a></li>
-                        }
-                        else
-                        {
-                            <li><a href="~/Employee?searchValue=@Model.SearchValue&page=@page">@page</a></li>
-                        }
-                    }
-
-                    // Pagination tail
-                    int endPage = currentPage + 4 < Model.PageCount ? currentPage + 4 : Model.PageCount;
-                    for (int page = currentPage + 1; page <= endPage; page++)
-                    {
-                        if (page == currentPage)
-                        {
-                            <li class="active"><a href="~/Employee?searchValue=@Model.SearchValue&page=@page">@page</a></li>
-                        }
-                        else
-                        {
-                            <li><a href="~/Employee?searchValue=@Model.SearchValue&page=@page">@page</a></li>
-                        }
-                    }
-                    if (currentPage + 4 < Model.PageCount)
-                    {
-                        int nextPage = currentPage + 1;
-                        <li><a href="#">...</a></li>
-                        <li><a href="~/Employee?searchValue=@Model.SearchValue&page=@nextPage">›</a></li>
-                        <li><a href="~/Employee?searchValue=@Model.SearchValue&page=@Model.PageCount">››</a></li>
-                    }
+</form>
+<div class="box-footer clearfix text-center">
+    <ul class="pagination pagination-sm no-margin pull-right">
+        @{
+            int currentPage = Model.Page;
+            // Pagination head
+            if (currentPage - 5 > 0)
+            {
+                int prePage = currentPage - 1;
+                <li><a href="~/Employee?searchValue=@Model.SearchValue&page=1">‹‹</a></li>
+                <li><a href="~/Employee?searchValue=@Model.SearchValue&page=@prePage">‹</a></li>
+                <li><a href="#">...</a></li>
+            }
+            int startPage = currentPage - 4 > 0 ? currentPage - 4 : 1;
+            for (int page = startPage; page <= currentPage; page++)
+            {
+                if (page == currentPage)
+                {
+                    <li class="active"><a href="~/Employee?searchValue=@Model.SearchValue&page=@page">@page</a></li>
                 }
-            </ul>
-        </div>
-    </div>
+                else
+                {
+                    <li><a href="~/Employee?searchValue=@Model.SearchValue&page=@page">@page</a></li>
+                }
+            }
+
+            // Pagination tail
+            int endPage = currentPage + 4 < Model.PageCount ? currentPage + 4 : Model.PageCount;
+            for (int page = currentPage + 1; page <= endPage; page++)
+            {
+                if (page == currentPage)
+                {
+                    <li class="active"><a href="~/Employee?searchValue=@Model.SearchValue&page=@page">@page</a></li>
+                }
+                else
+                {
+                    <li><a href="~/Employee?searchValue=@Model.SearchValue&page=@page">@page</a></li>
+                }
+            }
+            if (currentPage + 4 < Model.PageCount)
+            {
+                int nextPage = currentPage + 1;
+                <li><a href="#">...</a></li>
+                <li><a href="~/Employee?searchValue=@Model.SearchValue&page=@nextPage">›</a></li>
+                <li><a href="~/Employee?searchValue=@Model.SearchValue&page=@Model.PageCount">››</a></li>
+            }
+        }
+    </ul>
+</div>
+</div>
