--- a/LiteCommerce.Admin/Views/Product/Index.cshtml
+++ b/LiteCommerce.Admin/Views/Product/Index.cshtml
@@ -32,7 +32,7 @@
             <thead>
                 <tr>
                     <th style="width:30px">
-                        <input type="checkbox" />
+                        <input type="checkbox" onchange="selectAll(event)" />
                     </th>
                     <th style="width:50px">#</th>
                     <th style="width:200px">Name</th>
