--- a/LiteCommerce.Admin/Views/Employee/Index.cshtml
+++ b/LiteCommerce.Admin/Views/Employee/Index.cshtml
@@ -55,7 +55,7 @@
                             <td>@((Model.Page - 1) * Model.PageSize + ++i)</td>
                             <td>
                                 <div class="pull-left image">
-                                    <img src="~/@employee.PhotoPath" height="60px" width="60px" class="img-circle" alt="User Image">
+                                    <img src="~/Uploads/Images/@employee.PhotoPath" height="60px" width="60px" class="img-circle" alt="User Image">
                                 </div>
                                 <span style="color:#0094ff; font-weight:bold; display:block">
                                     @employee.FirstName @employee.LastName
