--- a/LiteCommerce.Admin/Views/Product/Input.cshtml
+++ b/LiteCommerce.Admin/Views/Product/Input.cshtml
@@ -24,7 +24,7 @@
                     <div class="col-sm-6">
                         <label>Supplier: @Html.ValidationMessage("SupplierID")</label>
                         <select class="form-control" name="SupplierID">
-                            <option value="">--Choose Supplier--</option>
+                            <option value="0">--Choose Supplier--</option>
                             @{
                                 foreach (var supplier in SelectListHelper.Suppliers())
                                 {
@@ -88,26 +88,30 @@
                 </div>
                 <!-- /.box-body -->
                 <div class="box-body">
-                    <div class="form-group row">
-                        <div class="col-sm-6">
-                            <label>Size:</label>
-                            <input name="attributes" type="text" class="form-control" />
-                        </div>
-                        <div class="col-sm-6">
-                            <label>Color: </label>
-                            <input name="attributes" type="text" class="form-control" />
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <div class="col-sm-6">
-                            <label>Material: </label>
-                            <input name="attributes" type="text" class="form-control" />
-                        </div>
-                        <div class="col-sm-6">
-                            <label>Origin: </label>
-                            <input name="attributes" type="text" class="form-control" />
-                        </div>
-                    </div>
+                    @{
+                        List<LiteCommerce.DomainModels.ProductAttribute> attributes = SelectListHelper.Attributes(Model.ProductID);
+                        for (int i = 0; i < attributes.Count; i += 2)
+                        {
+                            LiteCommerce.DomainModels.ProductAttribute att1 = attributes.ElementAt(i);
+                            LiteCommerce.DomainModels.ProductAttribute att2 = attributes.ElementAt(i + 1);
+                            <div class="form-group row">
+                                @if (att1 != null)
+                                {
+                                    <div class="col-sm-6">
+                                        <label>@att1.AttributeName:</label>
+                                        <input name="attributes" type="text" class="form-control" value="@att1.AttributeValues" />
+                                    </div>
+                                }
+                                @if (att2 != null)
+                                {
+                                    <div class="col-sm-6">
+                                        <label>@att2.AttributeName:</label>
+                                        <input name="attributes" type="text" class="form-control" value="@att2.AttributeValues" />
+                                    </div>
+                                }
+                            </div>
+                        }
+                    }
                 </div>
             </div>
         </div>
